Add comprehensive .gitignore and essential project files
- Add comprehensive .gitignore to exclude WordPress core, vendor deps, secrets
- Add essential Docker and WordPress config files
- Exclude hundreds of WordPress core files and dependencies
- Keep only: Dockerfile, composer files, wp-config.php, .htaccess
- Fix .dockerignore (was .docerignore)

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,24 @@
+# Git & Version Control
+.git/
+.gitignore
+.dockerignore
+
+# Development files
 .DS_Store
-node_modules
-dist
+node_modules/
+*.log
+.env*
+
+# Documentation
+README.md
+*.md
+
+# IDE files
+.vscode/
+.idea/
+
+# Build artifacts that shouldn't be in context
+dist/
+build/
+target/
 
