--- a/services/backend-master/composer.json
+++ b/services/backend-master/composer.json
@@ -3,13 +3,22 @@
     "description": "Headless WP for Astro SSR",
     "type": "project",
     "require": {
-        "johnpbloch/wordpress": "^5.9",
-        "woocommerce/woocommerce": "^3.5"
+        "johnpbloch/wordpress": "^6.8",
+        "wpackagist-plugin/woocommerce": "^10.0"
     },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://wpackagist.org"
+        }
+    ],
     "config": {
         "allow-plugins": {
             "johnpbloch/wordpress-core-installer": true,
             "composer/installers": true
         }
+    },
+    "extra": {
+        "wordpress-install-dir": "wp"
     }
 }
