--- a/services/backend-master/Dockerfile
+++ b/services/backend-master/Dockerfile
@@ -57,8 +57,9 @@ RUN mkdir -p wp-content/uploads \
 # the absolute required dependencies and libraries that are used.
 FROM php:8.1-apache
 
-RUN a2enmod rewrite \
-    && sed -ri 's/AllowOverride None/AllowOverride All/' /etc/apache2/apache2.conf
+# RUN a2enmod rewrite \
+#     && sed -ri 's/AllowOverride None/AllowOverride All/' /etc/apache2/apache2.conf
+COPY --from=l_architecte_php /etc/apache2/ /etc/apache2/
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
         g++ make autoconf \
