--- a/services/frontend-master/Dockerfile
+++ b/services/frontend-master/Dockerfile
@@ -9,6 +9,7 @@ RUN npm run build
 # ── Stage 2: Runtime ───────────────────────────────
 FROM node:lts-alpine AS runtime
 WORKDIR /app
+RUN apk add --no-cache curl
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/node_modules ./node_modules
 ENV HOST=0.0.0.0
